# routes/userRoute.js
@@ -25,11 +25,6 @@ const router = express.Router();
  *               password:
  *                 type: string
  *                 example: senha123
- *               descricao:
- *                 type: string
- *                 example: Sou um novo usuário.
- *               image:
- *                 type: string
  *     responses:
  *       201:
  *         description: Usuário criado com sucesso
